# GraphQL-Django

./: pyproject.toml
apps/cards/migrations/: 0001_initial.py
apps/decks/migrations/: 0001_initial.py
apps/schema/: schema.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
